@@ -68,10 +68,14 @@ struct TestPacketA : public protocol2::Packet
 
     template <typename Stream> bool Serialize( Stream & stream )
     {
-        serialize_check( stream, 0x12341234 );
+        serialize_check( stream, "start of TestPacketA" );
+
         serialize_int( stream, a, -10, 10 );
         serialize_int( stream, b, -20, 20 );
         serialize_int( stream, c, -30, 30 );
+        
+        serialize_check( stream, "end of TestPacketA" );
+        
         return true;
     }
 
@@ -104,10 +108,14 @@ struct TestPacketB : public protocol2::Packet
 
     template <typename Stream> bool Serialize( Stream & stream )
     {
-        serialize_check( stream, 0x12341234 );
+        serialize_check( stream, "start of TestPacketB" );
+
         serialize_int( stream, numItems, 0, MaxItems );
         for ( int i = 0; i < numItems; ++i )
             serialize_int( stream, items[i], -100, +100 );
+
+        serialize_check( stream, "end of TestPacketB" );
+
         return true;
     }
 
@@ -158,7 +166,8 @@ struct TestPacketC : public protocol2::Packet
 
     template <typename Stream> bool Serialize( Stream & stream )
     {
-        serialize_check( stream, 0x12341234 );
+        serialize_check( stream, "start of TestPacketC" );
+
         serialize_float( stream, position.x );
         serialize_float( stream, position.y );
         serialize_float( stream, position.z );
@@ -182,6 +191,9 @@ struct TestPacketC : public protocol2::Packet
                 velocity.z = 0.0f;
             }
         }
+
+        serialize_check( stream, "end of TestPacketC" );
+
         return true;
     }
 
