@@ -140,6 +140,16 @@ Friday May 20th, 2016
 
     Fuck me. That was it.
 
+    Both windows and mac working perfectly.
+
+    Linux is now complaining about serialize checks failing
+
+    Truncation?
+
+    Logic error with the sequence compression?
+
+    WTF... need to dig in. Tomorrow.
+
 
 Thursday May 19th, 2016
 =======================
